--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700" />
-
+  <style>
+    body {
+      background-image: url('2.jpg');
+    }
+  </style>
   <title>Weather Forecast</title>
 </head>
 
